Reset _article partial to use post.file_contents instead of post.contents_w_code

--- a/_templates/_article.html.erb
+++ b/_templates/_article.html.erb
@@ -19,7 +19,7 @@
       <%= @data[:header] %>
       <div id="body" class="row">
         <div class="col-xs-7 col-xs-offset-3">
-          <section class="article-container"><%=@data[:post].contents_w_code%></section>
+          <section class="article-container"><%=@data[:post].file_contents%></section>
         </div>
       </div>
       <%= @data[:footer] %>
